--- a/Mia/MiaPage.xaml
+++ b/Mia/MiaPage.xaml
@@ -15,7 +15,7 @@
     <StackLayout Padding="10,30,10,30">
         <ScrollView x:Name="Result" VerticalOptions="FillAndExpand"></ScrollView>
         <StackLayout Orientation="Horizontal">
-            <Entry x:Name="Request"  Placeholder="Ask me anything" TextColor="White" PlaceholderColor="White" BackgroundColor="#2590AA" HorizontalOptions="FillAndExpand">
+            <Entry x:Name="Request"  Placeholder="Ask me anything" TextColor="White" PlaceholderColor="White" HorizontalOptions="FillAndExpand">
             </Entry>
             <Image x:Name="StartSpeak" Aspect="AspectFit" HeightRequest="44" WidthRequest="44"></Image>
         </StackLayout>
