--- a/Mia/SettingsPage.xaml
+++ b/Mia/SettingsPage.xaml
@@ -18,6 +18,22 @@
                         </StackLayout>
                     </ViewCell>
                 </TableSection>
+            <TableSection>
+                <ViewCell x:Name="MyTheme">
+                        <StackLayout Orientation="Horizontal" Padding="10,0,15,0">
+                            <Label Text="Theme" VerticalTextAlignment="Center"/>
+                            <Label x:Name="Theme" Text="None" 
+                            VerticalTextAlignment="Center" 
+                            TextColor="Gray"
+                            HorizontalTextAlignment="End"
+                            HorizontalOptions="FillAndExpand"/>
+                                <Label Text=" >"
+                                TextColor="Silver"
+                                VerticalTextAlignment="Center"
+                              HorizontalOptions="End"/>
+                        </StackLayout>
+                    </ViewCell>
+            </TableSection>
             </TableView.Root>
         </TableView>
 </ContentPage>
